[package]
name = "ztee"
version = "0.1.0"
authors = ["Jason Dagit <dagitj@gmail.com>"]
license = "BSD-3-Clause"
edition = "2018"
description = "Similar to unix command tee, but compresses file output"
readme = "README.md"
repository = "https://github.com/dagit/ztee"
keywords = ["tool"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
flate2 = "1.0.14"
